# dearsql

./: .clang-format  .gitignore  .gitmodules  APP_METADATA  CMakeLists.txt  README.md  format  vcpkg.json
assets/fonts/: README.md
cmake/: EmbedResources.cmake  Info.plist.in
cmake/triplets/: arm64-osx.cmake
debian/: changelog  control  copyright  rules
include/: app_state.hpp  application.hpp  config.hpp.in  embedded_fonts.hpp  embedded_images.hpp  themes.hpp
include/ai/: ai_chat.hpp
include/database/: async_helper.hpp  base_database.hpp  connection_config.hpp  connection_factory.hpp  connection_pool.hpp  database_node.hpp  db.hpp  db_interface.hpp  db_ui_state.hpp  ddl_builder.hpp  ddl_utils.hpp  mongodb.hpp  mssql.hpp  mysql.hpp  postgresql.hpp  query_executor.hpp  redis.hpp  sql_builder.hpp  sqlite.hpp  ssh_tunnel.hpp  ssl_config.hpp  table_data_provider.hpp
include/database/mongodb/: mongodb_database_node.hpp
include/database/mssql/: mssql_database_node.hpp
include/database/mysql/: mysql_database_node.hpp
include/database/postgres/: postgres_database_node.hpp  postgres_schema_node.hpp
include/database/redis/: redis_node.hpp
include/database/sqlite/: sqlite_database_node.hpp
include/license/: license_manager.hpp
include/platform/: default_platform.hpp  linux_connection_dialog.hpp  linux_platform.hpp  linux_updater.hpp  macos_connection_dialog.hpp  macos_platform.hpp  macos_updater.hpp  opengl_texture.hpp  platform_interface.hpp  windows_connection_dialog.hpp  windows_platform.hpp
include/tabs/: tab.hpp
include/ui/: auto_complete_input.hpp  autocomplete_input.hpp  column_dialog.hpp  confirm_dialog.hpp  database_node.hpp  db_connection_dialog.hpp  db_sidebar.hpp  db_sidebar_new.hpp  diagram_tab.hpp  drop_column_dialog.hpp  hierarchy_helpers.hpp  input_dialog.hpp  license_dialog.hpp  log_panel.hpp  mysql_hierarchy.hpp  postgres_hierarchy.hpp  query_history.hpp  rename_dialog.hpp  sqlite_hierarchy.hpp  tab.hpp  tab_manager.hpp  table_dialog.hpp  table_renderer.hpp  text_editor.hpp
include/ui/new/: database_node.hpp  db_sidebar_new.hpp
include/ui/tab/: diagram_tab.hpp  redis_editor_tab.hpp  redis_key_viewer_tab.hpp  redis_pubsub_tab.hpp  sql_editor_tab.hpp  tab.hpp  table_viewer_tab.hpp
include/utils/: crypto.hpp  file_dialog.hpp  logger.hpp  sentry_utils.hpp  spinner.hpp
packaging/: io.gitlab.dunkbing.dearsql.desktop  io.gitlab.dunkbing.dearsql.metainfo.xml
packaging/flatpak/: dearsql.db99.dev.desktop  dearsql.db99.dev.metainfo.xml  io.gitlab.dunkbing.dearsql.desktop  io.gitlab.dunkbing.dearsql.metainfo.xml
scripts/: build  build-deb  build-flatpak  build-mac  build-ppa  build_app  build_deb  run-tests  run_tests  setup  setup-test-db  setup-ubuntu  setup_test_db  test_db_config
src/: app_state.cpp  application.cpp  application.mm  embedded_fonts.cpp  embedded_images.cpp  main.cpp
src/ai/: ai_chat.cpp  ai_client.cpp
src/database/: connection_factory.cpp  db_factory.cpp  db_utils.cpp  ddl_builder.cpp  mongodb.cpp  mssql.cpp  mysql.cpp  postgresql.cpp  query_executor.cpp  redis.cpp  sql_builder.cpp  sqlite.cpp  ssh_tunnel.cpp
src/database/mongodb/: mongodb_database_node.cpp
src/database/mssql/: mssql_database_node.cpp  mssql_utils.hpp
src/database/mysql/: mysql_database_node.cpp
src/database/postgres/: postgres_database_node.cpp  postgres_schema_node.cpp
src/database/redis/: redis_node.cpp
src/database/sqlite/: sqlite_database_node.cpp
src/license/: license_manager.cpp
src/platform/: default_platform.cpp  linux_alert.cpp  linux_connection_dialog.cpp  linux_platform.cpp  linux_updater.cpp  macos_alert.mm  macos_connection_dialog.mm  macos_platform.mm  macos_updater.mm  windows_alert.cpp  windows_connection_dialog.cpp  windows_platform.cpp
src/tabs/: tab.cpp  tab_manager.cpp
src/ui/: ai_chat_panel.cpp  ai_settings_dialog.cpp  auto_complete_input.cpp  column_dialog.cpp  confirm_dialog.cpp  database_node.cpp  db_connection_dialog.cpp  db_sidebar.cpp  db_sidebar_new.cpp  diagram_tab.cpp  drop_column_dialog.cpp  hierarchy_helpers.cpp  input_dialog.cpp  license_dialog.cpp  log_panel.cpp  mysql_hierarchy.cpp  postgres_hierarchy.cpp  query_history.cpp  rename_dialog.cpp  sqlite_hierarchy.cpp  tab.cpp  tab_manager.cpp  table_dialog.cpp  table_renderer.cpp  text_editor.cpp  text_editor_format.cpp  text_editor_highlight.cpp  text_editor_input.cpp  update_dialog.cpp
src/ui/new/: database_node.cpp  db_sidebar_new.cpp
src/ui/tab/: diagram_tab.cpp  redis_editor_tab.cpp  redis_key_viewer_tab.cpp  redis_pubsub_tab.cpp  redis_status_panel.cpp  sql_editor_tab.cpp  tab.cpp  table_viewer_tab.cpp
src/utils/: crypto.cpp  file_dialog.cpp  logger.cpp  sentry_init.cpp  spinner.cpp  texture_manager.cpp  toggle_button.cpp
tests/: README.md
tests/database/: connection_factory_test.cpp  mongodb_database_test.cpp  mssql_database_test.cpp  mysql_database_test.cpp  postgres_database_test.cpp  redis_database_test.cpp  sql_builder_test.cpp  sqlite_database_test.cpp
tests/ui/: sql_format_test.cpp
website/: astro.config.ts  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
